@@ -76,6 +76,7 @@ Version 1.4.23 - SVN
     in the configuration tool.
   - Configuration tool now shows the SquirrelMail version
   - Added new attachments_top hook to src/read_body.php
+  - When resuming a draft, correct (from) identity is now pre-selected
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
